# Platformer

./: .gitignore  ATTACK_IMPLEMENTATION_PLAN.md  CMakeLists.txt  README.md  file.txt
.github/workflows/: build.yml
assets/: README.md
assets/levels/: level1.csv  level1.txt
src/: CameraController.cpp  Game.cpp  Game.hpp  GameState.hpp  main.cpp
src/Entities/: AnimationSpec.h  Animator.cpp  Animator.h  Combat.h  Enemy.cpp  Enemy.h  EnemyConfig.h  EnemyManager.cpp  EnemyManager.h  Entity.h  Player.cpp  Player.h
src/Levels/: Level.cpp  Level.hpp  LevelManager.cpp  LevelManager.hpp  map.cpp  map.h
src/Physics/: Collision.cpp  Collision.h
src/UI/: GameOverScreen.cpp  GameOverScreen.h  HUD.cpp  HUD.h  LevelMenu.cpp  LevelMenu.h  MainMenu.cpp  MainMenu.h  MenuButton.h  MenuButtonStyle.h  PauseMenu.cpp  PauseMenu.h
src/core/: CameraController.cpp  CameraController.hpp  Game.cpp  Game.hpp
